--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,4 +10,9 @@ workflows:
   welcome:
     # Run the welcome/run job in its own container
     jobs:
-      - welcome/run
+      build:
+        docker:
+          - image: cimg/node:14.10.1
+        steps:
+          - checkout
+          - run: echo "hello world"       
