--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,3 +12,15 @@ jobs:
     steps:
           - checkout
           - run: echo "hello world"       
+  build2:
+    docker:
+      - image: cimg/node:14.10.1
+    steps:
+          - checkout
+          - run: print "Welcome Kalpesh"     
+workflows:
+  version: 2
+  build_and_test:
+    jobs:
+      - build
+      - build2
