--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,8 @@ jobs:
       - image: cimg/node:14.10.1
     steps:
           - checkout
-          - run: print "Welcome Kalpesh"     
+          - run: echo "Welcome Kalpesh"    
+          - run: ls -altr  
 workflows:
   version: 2
   build_and_test:
