--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,8 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 # Use a package of configuration called an orb.
-orbs:
-  # Declare a dependency on the welcome-orb
-  welcome: circleci/welcome-orb@0.4.1
-# Orchestrate or schedule a set of jobs
+environment:
+  My_Env_Var1: kalpesh
 jobs:
   build:
     docker:
@@ -17,7 +15,7 @@ jobs:
       - image: cimg/node:14.10.1
     steps:
           - checkout
-          - run: echo "Welcome Kalpesh"    
+          - run: echo "Welcome $My_Env_Var1"    
           - run: ls -altr  
 workflows:
   version: 2
