--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,12 @@ jobs:
       - image: cimg/node:14.10.1
     steps:
           - checkout
-          - run: echo "hello world to file" > kk-hw.txt       
+          - run: echo "hello world to file" > kk-hw.txt  
+          - persist_to_workspace:
+              root: /tmp/workspace
+              paths:
+                - target/application.jar
+                - build/*   
   build2:
     docker:
       - image: cimg/node:14.10.1
@@ -22,6 +27,5 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - save_hello_world_output
-   
       - build2
+      - save_hello_world_output
