--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,20 @@ jobs:
       - image: cimg/node:14.10.1
     steps:
           - checkout
-          - run: echo "hello world to file" > kk-hw.txt  
+          - run: echo "hello world to file" > ~/kk-hw.txt  
           - persist_to_workspace:
-              root: /tmp/kalpesh
+              root: ~/ 
               paths:
-                - build/*   
+                - kk-hw.txt
+  print_output_file:
+    docker:
+      - image: circi/node:14.10.1
+    steps:
+      - attach_workspace:
+        at: ~/
+    - run: cat ~/output.txt
+    
+      
   build2:
     docker:
       - image: cimg/node:14.10.1
