--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,18 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-environment:
-  My_Env_Var1: kalpesh
+
+commands:
+  print_pipeline_id:
+    steps:
+      - run: echo ${CIRCLE_WORKFLOW_ID}
+
 jobs:
-  save_hello_world_output:
+  my_job:
     docker:
-      - image: cimg/node:14.10.1
+      - image: circleci/node:13.8.0
     steps:
-        - checkout
-        - run: echo "hello world to file" > ~/kk-hw.txt  
-        - persist_to_workspace:
-            root: ~/ 
-            paths:
-              - kk-hw.txt
-      
-  build2:
-    docker:
-      - image: cimg/node:14.10.1
-    steps:
-          - checkout
-          - run: echo $My_Env_Var1
-          - run: date; echo '$My_Env_Var1';
-          - run: ls -altr  
+      - print_pipeline_id
+
 workflows:
-  version: 2
-  build_and_test:
+  my_workflow:
     jobs:
-      - build2
-      - save_hello_world_output
+      - my_job
