--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,17 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
-commands:
-  print_pipeline_id:
-    steps:
-      - run: echo ${CIRCLE_WORKFLOW_ID}
-
+# Use a package of configuration called an orb.
+environment:
+  My_Env_Var1: kalpesh
 jobs:
-  my_job:
+  save_hello_world_output:
     docker:
-      - image: circleci/node:13.8.0
+      - image: cimg/node:14.10.1
     steps:
-      - print_pipeline_id
-
+      - run: return 1
+      
 workflows:
-  my_workflow:
+  version: 2
+  build_and_test:
     jobs:
-      - my_job
+      - save_hello_world_output
