--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,17 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine. See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-# Use a package of configuration called an orb.
-environment:
-  My_Env_Var1: kalpesh
+
 jobs:
-  save_hello_world_output:
+  my_job:
     docker:
-      - image: cimg/node:14.10.1
+      - image: circleci/node:13.8.0
     steps:
       - run: return 1
-      
+      - run:
+          name: on error
+          command: echo "Hello sir, Error"
+          when: on_fail
+
 workflows:
-  version: 2
-  build_and_test:
+  my_workflow:
     jobs:
-      - save_hello_world_output
+      - my_job
