--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     docker:
       - image: circleci/node:13.8.0
     steps:
-      - run: echo "Hello Kalpesh"
+      - run: echos "kalpesh"
       - run:
           name: on error
           command: echo "Hello sir, Error"
